--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,22 @@
-body{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body {
+  margin: 0px;
 }
-ul{
+
+ul {
+  padding: 0px;
+  margin: 0px;
   list-style: none;
 }
-img{
+
+img {
   display: block;
   max-width: 100%;
-  cursor: pointer;
 }
-.slide-wrapper{
+
+.slide-wrapper {
   overflow: hidden;
 }
+
 .slide {
   display: flex;
 }
@@ -39,4 +42,25 @@ img{
 .slide li.active {
   opacity: 1;
   transform: scale(1);
+}
+
+[data-control="slide"] {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+[data-control="slide"] li a {
+  display: block;
+  width: 12px;
+  height: 12px;
+  background: #FB5;
+  border-radius: 50%;
+  overflow: hidden;
+  text-indent: -999px;
+  margin: 5px;
+}
+
+[data-control="slide"] li.active a, [data-control="slide"] li a:hover {
+  background: #E54;
 }
